Tweak footer to prevent overflowing of text

--- a/css/styles.css
+++ b/css/styles.css
@@ -125,9 +125,8 @@ h2 {
       color: #CCC;
       text-shadow: 0px 0px 8px #BBB;
       line-height: 1.3;
-      width: 33%;
-      margin-left: 33%;
-      margin-right: 33%;
+      width: fit-content;
+      margin: 0 auto;
       right: 0;
       bottom: 0;
       left: 0;
