--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -42,9 +42,13 @@
             color: #CCC;
             text-shadow: 0px 0px 8px #BBB;
             line-height: 1.3;
-            width: 33%;
-            margin-left: 33%;
-            margin-right: 33%;
+            // width: 33%;
+            // margin-left: 33%;
+            // margin-right: 33%;
+            width: fit-content;
+            margin: 0 auto; 
+            // margin-left: 33%;
+            // margin-right: 33%;
             right: 0;
             bottom: 0; 
             left: 0;
